--- a/css/sitemap1.css
+++ b/css/sitemap1.css
@@ -10,10 +10,9 @@ section{
 }
 
 /* ============ footer ============ */
-
 .footer_sitemap{
 	width:100%;
-	height:0px;
+	height:0px;  /* JQuery에서 높이변경 */
 	margin:100px auto 0;
 	border-top: 1px solid #c3c3c3;
 	transition: 0.5s;
@@ -36,17 +35,12 @@ section{
 	left: 50%;
 	transform: translateX(-50%);
 }
-.sitemap_btn .fa{
-	margin-left: 10px;
-}
+.sitemap_btn .fa{margin-left: 10px;}
+
 
 /* ==== sitemap ==== */
-
-
 .sitemap{display:none;} 
-.sitemap_list{
-	display: flex;
-}
+.sitemap_list{display: flex;}
 .sitemap_list>li{
 	flex: 1;
 	height:220px;
@@ -54,9 +48,7 @@ section{
 	border-right:1px solid #e5e5e5;
 	line-height:20px;
 }
-.sitemap_list>li:first-child{
-	border-left:1px solid #e5e5e5;
-}
+.sitemap_list>li:first-child{border-left:1px solid #e5e5e5;}
 .sitemap_list>li>a{  
 	display:block;
 	margin-bottom:10px;
@@ -75,7 +67,6 @@ section{
 	color:#b1b1b1;
 }
 
-
 .footer_copy{
 	/* border: 1px solid #000; */
 	width: 1200px;
@@ -83,12 +74,8 @@ section{
 	margin: 30px auto;
 	display: flex;
 }
-.copy_left{
-	flex: 1;
-}
-.copy_center{
-	flex: 5;
-}
+.copy_left{flex: 1;}
+.copy_center{flex: 5;}
 .copy_right{
 	height: 70px;
 	flex: 1;
