--- a/css/select2.css
+++ b/css/select2.css
@@ -1,7 +1,7 @@
-@import url(common.css);
+@import url(reset.css);
+@import url(font.css);
 
 body{background:#dddcdb}
-*{box-sizing: border-box;}
 
 section{
 	width:1200px;
